# Matchif-AI

./: .dockerignore  Dockerfile  README.md  docker-compose.yml
backend/: preprocess.py  pyproject.toml  server.py
backend/notebooks/: Exploratory Data Analysis.ipynb
backend/src/clients/: weaviate_client.py
backend/src/config/: config.py
backend/src/preprocessor/: preprocessor.py
backend/src/routes/: job_postings.py  static_files.py
backend/src/services/: job_service.py  user_service.py
backend/src/utils/: pdf_utils.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: CarouselContainer.js  Circle.js  DragAndDropSection.js  HeroSection.js  JobCard.js  JobCarousel.js  UploadStatus.js
frontend/src/hooks/: useFileUpload.js
frontend/src/styles/: App.styles.js  CarouselContainer.styles.js  CircleStyles.styles.js  DragAndDropSectionStyles.styles.js  GlobalStyle.styles.js  HeroSectionStyles.styles.js  JobCard.styles.js  JobCarousel.styles.js  JobCarouselStyles.styles.js  UploadStatusStyles.styles.js  animations.js
pulumi/: Pulumi.dev.yaml  index.ts  package-lock.json  package.json
server/: pyproject.toml  server.py
server/src/config/: config.py
server/src/routes/: static_files.py
server/src/services/: job_service.py
server/src/utils/: pdf_utils.py
