[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Liam Eloie <liam.d.eloie@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
weaviate-client = "^4.6.3"
pymupdf = "^1.24.4"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
